--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Baking App</string>
+    <string name="recipe">Recipe</string>
+    <string name="title_activity_step">StepActivity</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="ingredients_list">Ingredients list:</string>
+    <string name="video">Video</string>
+    <string name="next_step">Next Step</string>
+    <string name="prev_step">Previous Step</string>
 </resources>
