Tablet support using fragments, widget to show recipe ingredients

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="video">Video</string>
     <string name="next_step">Next Step</string>
     <string name="prev_step">Previous Step</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
 </resources>
